Save Instance and Sending parameters to backend through Dialogflow

--- a/common/properties/strings_es.properties
+++ b/common/properties/strings_es.properties
@@ -1,5 +1,8 @@
+EMPTY_ANSWER=🤔
 GREETING=¿Qué quieres hacer?
 HELLO=Hola! Soy Zenkai, tu asistente personal.
 INPUT_TEXT_HINT=Escribe un mensaje
 MICROPHONE_DISABLED=El micrófono está deshabilitado
+TIMEOUT=¿Podrías repetirlo, por favor?
+TRY_AGAIN=Inténtalo de nuevo
 TTS_ERROR=Error con el servicio de sintetización de voz
