Improved interaction, microphone and message handling

--- a/common/properties/strings_es.properties
+++ b/common/properties/strings_es.properties
@@ -1,8 +1,7 @@
-EMPTY_ANSWER=🤔
-GREETING=¿Qué quieres hacer?
-HELLO=Hola! Soy Zenkai, tu asistente personal.
+EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Escribe un mensaje
 MICROPHONE_DISABLED=El micrófono está deshabilitado
+SPEAK_NOW=Habla
 TIMEOUT=¿Podrías repetirlo, por favor?
 TRY_AGAIN=Inténtalo de nuevo
 TTS_ERROR=Error con el servicio de sintetización de voz
