Tokens a Shared Preferences & Best Voice interaction

--- a/common/properties/strings_es.properties
+++ b/common/properties/strings_es.properties
@@ -1,6 +1,7 @@
 EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Escribe un mensaje
 MICROPHONE_DISABLED=El micrófono está deshabilitado
+SHARE=Compartir
 SPEAK_NOW=Habla
 TIMEOUT=¿Podrías repetirlo, por favor?
 TRY_AGAIN=Inténtalo de nuevo
