--- a/common/properties/strings_es.properties
+++ b/common/properties/strings_es.properties
@@ -1,6 +1,8 @@
 EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Escribe un mensaje
 MICROPHONE_DISABLED=El micrófono está deshabilitado
+NO_GREETINGS=¡Hola! Soy Zenkai, tu asistente personal.\nMe encantaría ayudarte, pero primero debes habilitar la conexión a Internet. Comprueba que la conexión Wi-Fi o de datos móviles esté activada.
+NO_NETWORK=No se puede conectar con Zenkai. Comprueba tu conexión a Internet.
 SHARE=Compartir
 SPEAK_NOW=Habla
 TIMEOUT=¿Podrías repetirlo, por favor?
