Login token finish

--- a/common/properties/strings_es.properties
+++ b/common/properties/strings_es.properties
@@ -1,9 +1,11 @@
+CLIPBOARD=Copiado en el portapapeles
 EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Escribe un mensaje
 INTERNAL_ERROR=Ha ocurrido un error al procesar la petición.
 MICROPHONE_DISABLED=El micrófono está deshabilitado
-NO_GREETINGS=¡Hola! Soy Zenkai, tu asistente personal.\nMe encantaría ayudarte, pero primero debes habilitar la conexión a Internet. Comprueba que la conexión Wi-Fi o de datos móviles esté activada.
+NO_GREETINGS=¡Hola! Soy Zenkai, tu asistente personal.
 NO_NETWORK=No se puede conectar con Zenkai. Comprueba tu conexión a Internet.
+NO_NETWORK_GREETINGS=Me encantaría ayudarte, pero primero debes habilitar la conexión a Internet. Comprueba que la conexión Wi-Fi o de datos móviles esté activada.
 SHARE=Compartir
 SPEAK_NOW=Habla
 TIMEOUT=¿Podrías repetirlo, por favor?
